fix overflow hidden on loading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,14 +220,24 @@ button {
 
 }
 
-/* 
-.footer-3d::before {
-    content: 'humblebee';
-    position: absolute;
-    top: 30px;
-    left: -30px;
-    color: rgba(0, 0, 0, 0.3);
-    text-shadow: none;
-    filter: blur(8px);
-    z-index: -1;
-} */
+.live-site img:nth-child(1) {
+    animation: live-1 0.7s ease infinite;
+    translate: 0vw, 0vw;
+}
+
+.live-site img:nth-child(2) {
+    animation: live-2 0.7s ease infinite;
+    translate: -7vw, 7vw;
+}
+
+@keyframes live-1 {
+    100% {
+        transform: translate(7vw, -7vw);
+    }
+}
+
+@keyframes live-2 {
+    100% {
+        transform: translate(0vw, 0vw);
+    }
+}
